fix: Fix nav bar on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,7 +221,7 @@ footer {
 }
 
 #endp {
-    width: 105%;
+    width: 100%;
     margin-top: 5em;
     font-size: xx-large;
     background-color: #1e1c1c;
@@ -234,17 +234,29 @@ footer {
    
     .bg-img {
         background-size:400% ;
-        
-        
-       
+    }
+    nav  
+        {width: 100%;}
+    
+    .menu a{
+        width: fit-content;
+        font-size: 24px;
+    }
+
+    footer {
+        width: 100%;
     }
 
     #graph{
-        margin-left: 0; 
-        width: 100%;
-        height: 70%;
-        margin-top: 2%;
+       margin: 0;
+       padding: 0px;
+        overflow: hidden;
+        width: 95%;
+        height: auto;
+        
+        
     }
+
     .images {
         display: block;
         flex-direction: column;
@@ -252,7 +264,7 @@ footer {
         align-content: center;
     }
     .imgindiv {
-        width: 104%;
+        width: 100%;
         height: auto;
         top: 0;
         margin: 0;
@@ -260,7 +272,10 @@ footer {
         
         
     }
+    .social-networks i {
+        font-size: 100%;
 } 
+}
 
 @keyframes imgzoom {
     from {
@@ -269,4 +284,4 @@ footer {
     to {
         transform: scale(1.1);
     }
-}
+    }
